crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@packages__Django__4.2.28__django__contrib__admin__templatetags__log.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/4.2.28/django/contrib/admin/templatetags/log.py
---
tag_rules:
  "django.contrib.admin.templatetags.log::get_admin_log":
    arg_constraints:
      - Min: 4
    required_keywords:
      - position: 2
        value: as
      - position: 4
        value: for_user
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: as
        required: true
        kind:
          Literal: as
        position: 1
      - name: arg3
        required: true
        kind: Variable
        position: 2
      - name: for_user
        required: true
        kind:
          Literal: for_user
        position: 3
    supports_as_var: false
filter_arities: {}
block_specs: {}
